--- a/AngelNetwork/AngelNetwork.csproj
+++ b/AngelNetwork/AngelNetwork.csproj
@@ -131,7 +131,7 @@
     <Content Include="models\ket-struct.js" />
     <Content Include="models\ket-utility.js" />
     <Content Include="models\leon-caret.js" />
-    <Content Include="pixcel-array.html" />
+    <Content Include="dct-pixar-med.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
