--- a/AngelLayout/AngelLayout.csproj
+++ b/AngelLayout/AngelLayout.csproj
@@ -77,6 +77,9 @@
       <DependentUpon>FormShape.cs</DependentUpon>
     </Compile>
     <Compile Include="BitmapRegion.cs" />
+    <Compile Include="HandleOffset\Joystick.cs" />
+    <Compile Include="HandleOffset\JoystickAPI.cs" />
+    <Compile Include="HandleOffset\JoystickEventArgs.cs" />
     <Compile Include="Karet.cs">
       <SubType>Form</SubType>
     </Compile>
