--- a/AutoDesk/AutoDesk.csproj
+++ b/AutoDesk/AutoDesk.csproj
@@ -44,13 +44,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cyper.cs" />
-    <Compile Include="Kovet.cs" />
     <Compile Include="Hyper.cs" />
+    <Compile Include="Kovet.cs" />
     <Compile Include="Lasik.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Raket.cs" />
-    <Compile Include="Rastal.cs" />
+    <Compile Include="Nox.cs" />
+    <Compile Include="Rastek.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -58,7 +58,7 @@
   <ItemGroup>
     <Content Include="dct-pixar-med.html" />
     <Content Include="flex-mytric.txt" />
-    <Compile Include="SpaceRanger.cs" />
+    <Content Include="SpaceRanger.txt" />
     <Content Include="asc-ii.txt" />
     <Content Include="TextFile1.txt" />
     <Content Include="TyperLect.txt" />
