--- a/AutoDesk/AutoDesk.csproj
+++ b/AutoDesk/AutoDesk.csproj
@@ -46,13 +46,16 @@
     <Compile Include="Binary.cs" />
     <Compile Include="Cyper.cs" />
     <Compile Include="Hyper.cs" />
+    <Compile Include="Kater\Aoz.cs" />
     <Compile Include="Kater\Hex.cs" />
+    <Compile Include="Kater\Kot.cs" />
     <Compile Include="Kovet.cs" />
     <Compile Include="Lasik.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Kater\Ket.cs" />
     <Compile Include="Rastek.cs" />
+    <Compile Include="Aub.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
