--- a/Rastera/Rastera.csproj
+++ b/Rastera/Rastera.csproj
@@ -95,7 +95,8 @@
     <Content Include="asnic\rastera\rast.html" />
     <Content Include="asnic\rastera\redemption.html" />
     <Content Include="asnic\rastera\scratch.html" />
-    <Content Include="asnic\rastera\slept-off.html" />
+    <Content Include="asnic\rastera\slept-offsive.htm" />
+    <Content Include="asnic\rastera\slepting.html" />
     <Content Include="asnic\rastera\solid.html" />
     <Content Include="asnic\rastera\transcolor.html" />
     <Content Include="asnic\rastera\vesaid.html" />
