--- a/Kontral/Kontral.vcxproj.filters
+++ b/Kontral/Kontral.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Kontral.cpp">
+    <ClCompile Include="stdafx.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="stdafx.cpp">
+    <ClCompile Include="kontral.app">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
