--- a/Autodesk/Autodesk.csproj
+++ b/Autodesk/Autodesk.csproj
@@ -235,6 +235,7 @@
     <Content Include="analytical\requires.html" />
     <Content Include="analytical\comsek.html" />
     <Content Include="analytical\delyix.html" />
+    <Content Include="analytical\vivo-requires.html" />
     <Content Include="dynamicals\LinqBridge.dll" />
     <Content Include="handy\TextFile1.txt" />
     <Content Include="analytical\isoc.html" />
