--- a/Analytical/Analytical.csproj
+++ b/Analytical/Analytical.csproj
@@ -17,6 +17,7 @@
     </FileUpgradeFlags>
     <OldToolsVersion>3.5</OldToolsVersion>
     <UpgradeBackupLocation />
+    <UseIISExpress>false</UseIISExpress>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -49,6 +50,7 @@
     <Reference Include="System.Web.Mobile" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="analytical\absock.html" />
     <Content Include="analytical\advent.html" />
     <Content Include="analytical\anyiket.html" />
     <Content Include="analytical\asnical.html" />
