l-7 fond self bein Xoumen

--- a/Analytical/Analytical.csproj
+++ b/Analytical/Analytical.csproj
@@ -85,7 +85,7 @@
     <Content Include="analytical\Leonic\c.html" />
     <Content Include="analytical\Leonic\ctr.html" />
     <Content Include="analytical\Leonic\leon.html" />
-    <Content Include="analytical\Leonic\r.html" />
+    <Content Include="analytical\Leonic\frant.html" />
     <Content Include="analytical\Leonic\rt.html" />
     <Content Include="analytical\Leonic\t.html" />
     <Content Include="analytical\Leonic\trikon.html" />
