--- a/Autodesk/Autodesk.csproj
+++ b/Autodesk/Autodesk.csproj
@@ -239,7 +239,8 @@
     <Content Include="analytical\comsek.html" />
     <Content Include="analytical\delyix.html" />
     <Content Include="analytical\vivo-requires.html" />
-    <Content Include="desk\pixels.html" />
+    <Content Include="desk\ayric-pixel.html" />
+    <Content Include="desk\ionic-fond.html" />
     <Content Include="dynamicals\LinqBridge.dll" />
     <Content Include="handy\TextFile1.txt" />
     <Content Include="analytical\isoc.html" />
