--- a/Kontral/Kontral.vcxproj.filters
+++ b/Kontral/Kontral.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="karact.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ReadMe.txt" />
