--- a/Kontral/Kontral.vcxproj
+++ b/Kontral/Kontral.vcxproj
@@ -94,6 +94,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="karact.h" />
     <ClInclude Include="rebiz.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
